Auto-commit: SgfParser.java